--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "start-soketi": "npx soketi start --config=soketi.json"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
@@ -17,6 +18,7 @@
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
         "laravel-echo": "^2.1.7",
-        "pusher-js": "^8.4.0"
+        "pusher-js": "^8.4.0",
+        "soketi": "^1.0.0"
     }
 }
