--- a/receiver/package.json
+++ b/receiver/package.json
@@ -7,12 +7,12 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.7.16",
     "axios": "^1.6.2",
+    "dotenv": "^16.0.3",
     "express": "^5.1.0",
     "form-data": "^4.0.0",
     "node-fetch": "^2.6.7",
-    "pino": "^8.17.1",
-    "pino-pretty": "^10.2.3",
-    "dotenv": "^16.0.3"
+    "pino": "^10.0.0",
+    "pino-pretty": "^10.2.3"
   },
   "scripts": {
     "start": "node index.js"
