--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
         "laravel-echo": "^2.1.7",
-        "pusher-js": "^8.4.0",
-        "soketi": "^1.0.0"
+        "pusher-js": "^8.4.0"
     }
 }
