Removed almost all of the summary documents, that were created by AI over the course of this project; Fixed the logging system; Added contact info menu; Added partial support of groups

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "beyondcode/laravel-websockets": "^1.14"
+        "beyondcode/laravel-websockets": "^1.14",
+        "doctrine/dbal": "^3.10"
     }
 }
