--- a/frontend/vue-project/package.json
+++ b/frontend/vue-project/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@types/pusher-js": "^5.1.0",
     "axios": "^1.6.0",
