--- a/receiver/package.json
+++ b/receiver/package.json
@@ -2,10 +2,11 @@
   "name": "whatsapp-bot-fuer-lukas",
   "version": "1.0.0",
   "description": "WhatsApp integration with PHP backend",
+  "type": "module",
   "main": "index.js",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.16",
+    "@whiskeysockets/baileys": "^6.7.19",
     "axios": "^1.6.2",
     "dotenv": "^16.0.3",
     "express": "^5.1.0",
